fixed contact us icon alignment

--- a/css/style.css
+++ b/css/style.css
@@ -20223,7 +20223,7 @@ div#mCSB_1_container{
 
 .contact-section .contact-form-area .form-inner .form-group i{
   position: absolute;
-  top: 23px;
+  top: 42px;
   right: 30px;
   font-size: 15px;
   font-weight: 700;
